Add Saline specialized guide

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -72,6 +72,7 @@ endif::[]
 **** xref:salt/salt-formula-liberate.adoc[Liberate Formula]
 **** xref:salt/salt-formula-monitoring.adoc[Monitoring Formulas]
 **** xref:salt/salt-formula-pxe.adoc[PXE Formula]
+**** xref:salt/salt-formula-saline.adoc[Saline Formula]
 **** xref:salt/salt-formula-saltboot.adoc[Saltboot Formula]
 **** xref:salt/salt-formula-tftpd.adoc[TFTPd Formula]
 **** xref:salt/salt-formula-virtualization-guest.adoc[Virtualization Guest Formula]
@@ -82,6 +83,7 @@ endif::[]
 *** xref:salt/salt-rate-limiting.adoc[Rate Limiting]
 *** xref:salt/salt-scaling-minions.adoc[Scaling Minions]
 *** xref:salt/salt-connectivity.adoc[Salt Connectivity]
+*** xref:salt/salt-monitoring.adoc[Monitoring Salt]
 ** xref:large-deployments/overview.adoc[Large Deployments Guide]
 *** xref:large-deployments/hardware-reqs.adoc[Hardware Requirements]
 *** xref:large-deployments/single-server.adoc[Single Server]
