Apply suggestions from code review
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/specialized-guides/pages/large-deployments/monitoring.adoc
+++ b/modules/specialized-guides/pages/large-deployments/monitoring.adoc
@@ -17,6 +17,6 @@ endif::[]
 You need to install Prometheus and Grafana on a machine separate from the {productname} Server.
 We recommend you use a managed client as your monitoring server.
 
-It's recommended to monitor {salt} event bus in the large scale deployments with xref:salt/salt-monitoring.adoc#saline[Saline] to identify possible bottlenecks.
+It is recommended to monitor the {salt} event bus in the large scale deployments with xref:specialized-guides:salt/salt-monitoring.adoc#saline[Saline] to identify possible bottlenecks.
 
 For more information on monitoring, see xref:administration:monitoring.adoc[].
