--- a/modules/specialized-guides/pages/salt/salt-formula-saline.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-saline.adoc
@@ -8,7 +8,7 @@ The package is installed by default, and contains these formulas:
 * Saline Prometheus
 * Saline Grafana
 
-These formulas are extending the configuration of Grafana and Prometheus made with xref:salt/salt-formula-monitoring.adoc[Monitoring Formulas].
+These formulas are extending the configuration of Grafana and Prometheus created with xref:salt/salt-formula-monitoring.adoc[Monitoring Formulas].
 
 
 == Saline Prometheus
@@ -33,5 +33,5 @@ These formulas are extending the configuration of Grafana and Prometheus made wi
 
 When you have completed and saved all the forms, apply the highstate.
 
-For more information about configuring Prometheus and Grafana with formulas, see xref:salt/salt-formula-monitoring.adoc[Monitoring Formulas].
-For more information about using monitoring, see xref:administration:monitoring.adoc[Monitoring with Prometheus and Grafana].
+* For more information about configuring Prometheus and Grafana with formulas, see xref:salt/salt-formula-monitoring.adoc[Monitoring Formulas].
+* For more information about using monitoring, see xref:administration:monitoring.adoc[Monitoring with Prometheus and Grafana].
