--- a/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
+++ b/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
@@ -6,4 +6,4 @@ For installations with more than 1000 clients per {productname} Server, adequate
 
 For more information on managing large scale deployments, see xref:specialized-guides:large-deployments/overview.adoc[].
 
-It's recommended to monitor {salt} event bus in the large scale deployments with xref:salt/salt-monitoring.adoc#saline[Saline] to identify possible bottlenecks.
+It is recommended to monitor the {salt} event bus in the large scale deployments with xref:salt/salt-monitoring.adoc#saline[Saline] to identify possible bottlenecks.
