--- a/modules/specialized-guides/pages/salt/salt-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-monitoring.adoc
@@ -1,8 +1,8 @@
 [[salt-monitoring]]
 
-= Monitoring salt events
+= Monitoring {salt} Events
 
-In some cases {salt} event bus could publish significant amount of events with the high rate, what could make it hard to analize.
+In some cases the {salt} event bus could publish significant amount of events with a high rate, what could make it hard to analize.
 Getting the statistics based on the events published in the {salt} event bus can help to identify possible weak points and perform {salt} internals profiling.
 
 [[saline]]
@@ -23,12 +23,13 @@ After finishing the deployment [literal]``uyuni-server-saline@0.service`` should
 
 == {salt} master configuration recommendations
 
-It's recommended to add [option]``master_stats: True`` and adjust the value of [option]``master_stats_event_iter: 60`` if needed and restart [command]``salt-master``,
-to get the detailed statistics of internal salt calls, what can be very helpful for tweaking large scale deployment installations.
+It is recommended to add [option]``master_stats: True`` and adjust the value of [option]``master_stats_event_iter: 60`` if needed.
+Then restart [command]``salt-master`` to get the detailed statistics of internal {salt} calls.
+This can be help with tuning large scale deployment installations.
 
 == Saline formula
 
-To configure Prometheus and Grafana dashboards, see xref:specialized-guides:salt/salt-formulas-saline.adoc[Saline Formula]
+To configure Prometheus and Grafana dashboards, see xref:specialized-guides:salt/salt-formulas-saline.adoc[Saline Formula].
 
 == Removing Saline
 
