--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -232,6 +232,10 @@ If the default user has been granted administrative privileges during installati
 With cloud instances this does not happen because [command]``cloud-init`` automatically creates a file under [path]``/etc/sudoers.d`` and grants privilege escalation through [command]``sudo`` without the need for a password.
 ====
 
+
+
+=== Grant Root User Access
+
 .Procedure: Granting Root User Access
 
 . On the client, edit the [filename]``sudoers`` file:
@@ -254,6 +258,29 @@ When the client is successfully installed it runs with root privileges, so the a
 We recommend that you remove the line from the [path]``sudoers`` file after the client has been successfully installed.
 ====
 
+
+
+=== Bootstrap as Install-created User via SSH
+
+To bootstrap an Ubuntu client via SSH you must add the install-created user to the sudo group.
+Then run the bootstrap script from the client.
+
+.Procedure: Adding Install-created User to sudo Group and Bootstrapping via SSH
+
+. On the client, as root, execute on the command line (replace [literal]``<username>`` with the name of the install-created user):
++
+
+----
+sudo usermod -aG sudo <username>
+----
+
+. Bootstrap the client system from its command line (replace [literal]``<SERVER_FQDN>`` with the fully qualified domain name of the {productname} Server):
++
+
+----
+sudo su -
+curl -Sks https://<SERVER_FQDN>/pub/bootstrap/bootstrap-script.sh | /bin/bash
+----
 
 
 == Register Clients
