--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -282,6 +282,8 @@ sudo su -
 curl -Sks https://<SERVER_FQDN>/pub/bootstrap/bootstrap-script.sh | /bin/bash
 ----
 
+It must be noted that Ubuntu can only be bootstrapped using the corresponding Ubuntu bootstrap script run from the client system's command line after issuing "sudo su -" as above, it cannot be bootstrapped via the SUMA webUI due to the fact that the root user is disabled on Ubuntu by default, and that the webUI does not permit for privilege escalation of the Unbuntu install-created user.
+
 
 == Register Clients
 
