bootstrap via SSH

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -267,7 +267,7 @@ Then run the bootstrap script from the client.
 
 .Procedure: Adding Install-created User to sudo Group and Bootstrapping via SSH
 
-. On the client, as root, execute on the command line (replace [literal]``<username>`` with the name of the install-created user):
+. On the client, as root, run from the command line (replace [literal]``<username>`` with the name of the install-created user):
 +
 
 ----
@@ -282,7 +282,9 @@ sudo su -
 curl -Sks https://<SERVER_FQDN>/pub/bootstrap/bootstrap-script.sh | /bin/bash
 ----
 
-It must be noted that Ubuntu can only be bootstrapped using the corresponding Ubuntu bootstrap script run from the client system's command line after issuing "sudo su -" as above, it cannot be bootstrapped via the SUMA webUI due to the fact that the root user is disabled on Ubuntu by default, and that the webUI does not permit for privilege escalation of the Unbuntu install-created user.
+{ubuntu} can only be bootstrapped using the corresponding {ubuntu} bootstrap script run from the client system's command line after issuing [command]``sudo su -`` as above.
+It cannot be bootstrapped via the {productname} {webui} due to the fact that the root user is disabled on {ubuntu| by default, and that the {webui} does not permit for privilege escalation of the {ubuntu} install-created user.
+
 
 
 == Register Clients
