--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -283,7 +283,7 @@ curl -Sks https://<SERVER_FQDN>/pub/bootstrap/bootstrap-script.sh | /bin/bash
 ----
 
 {ubuntu} can only be bootstrapped using the corresponding {ubuntu} bootstrap script run from the client system's command line after issuing [command]``sudo su -`` as above.
-It cannot be bootstrapped via the {productname} {webui} due to the fact that the root user is disabled on {ubuntu| by default, and that the {webui} does not permit for privilege escalation of the {ubuntu} install-created user.
+It cannot be bootstrapped via the {productname} {webui} due to the fact that the root user is disabled on {ubuntu} by default, and that the {webui} does not permit for privilege escalation of the {ubuntu} install-created user.
 
 
 
