Replace mgradm cp w/ mgrctl cp in migration docs
mgradm does not have a cp subcommand. Should be mgrctl instead

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
@@ -157,7 +157,7 @@ Because {suse} does not install RPM packages in the container, the administrator
 . Copy the file into the container with:
 +
 ----
-mgradm cp /local/ca.file server:/etc/pki/trust/anchors/
+mgrctl cp /local/ca.file server:/etc/pki/trust/anchors/
 ----
 
 
