--- a/modules/specialized-guides/pages/salt/salt-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-monitoring.adoc
@@ -8,9 +8,17 @@ Getting the statistics based on the events published in the {salt} event bus can
 [[saline]]
 = Saline
 
-Saline is a tool which can be used as Prometheus exporter to get the metrics based on the events from the {salt} event bus.
-Saline is getting the statistics from the events which can also be retrived from the {salt} master with [command]``mgrctl exec -ti -- salt-run state.event``.
-Besides of the Prometheus exporter Saline also provides [literal]``saline-formula``, which can be used to configure Prometheus and Grafana dashboards.
+Saline is a powerful tool designed to function as a Prometheus exporter, enabling the collection of metrics based on events from the {salt} event bus. 
+These metrics are derived from event data available on the {salt} master, similar to what is accessible through the command:  
+
+----
+mgrctl exec -ti -- salt-run state.event
+----
+
+Saline is distributed as a separate container image, [literal]``server-saline``, for use with {productname} Server. 
+All related commands and operations should be executed on the {productname} Server container host system.
+
+In addition to its role as a Prometheus exporter, Saline also provides the [literal]``saline-formula``, which simplifies configuration of Prometheus and Grafana dashboards, enhancing monitoring and visualization capabilities.
 
 [[saline-deployment]]
 == Saline deployment
@@ -35,3 +43,61 @@ To configure Prometheus and Grafana dashboards, see xref:specialized-guides:salt
 
 To remove Saline from the {productname} Server use [command]``mgradm upgrade podman`` with [option]``--saline-replicas 0``.
 
+= Examples of resulting Grafana dashboards
+
+== Uyuni Server (with Saline) dashboard
+
+The dashboard represents {salt} events with the different views presented on the panels.
+
+[[salt-events-panel]]
+=== Salt Events
+
+The panel represents all the {salt} events grouped by categories. [literal]``Salt events`` represents the total number of all categories of the events.
+
+image::saline-salt-events.png[Salt Events]
+
+=== Minions Activity
+
+The panel provides the minions activity status for the specified interval of times. It shows the amount of minions which were active in last minute, 5 minutes, 15 minutes, 1 hour or considered offline on this moment of time or even ever seen (could be targeted or either responded or not) or active.
+
+image::saline-salt-minions-activity.png[Minions Activity]
+
+=== Salt Events by Tags and Functions
+
+The panel provides the detailed representation of xref:#salt-events-panel[Salt Events] with the event spread by direction. The events which are send to the minions are presented on the positive side of the axis, while the events received from the minions are presented on the negative side.
+
+image::saline-salt-events-by-tags-and-fun.png[Salt Events by Tags and Functions]
+
+=== Salt States
+
+The panel represents states apply process events grouped by the status: succeeded, failed, causing errors or applied in the test mode.
+
+image::saline-salt-states.png[Salt States]
+
+=== Salt Master Stats (runs)
+
+The panel represents the number of internal calls grouped by function, which are exposed with {salt} stats.
+
+image::saline-salt-master-stats-runs.png[Salt Master Stats (runs)]
+
+=== Salt Master Stats (avg. duration)
+
+The panel represents the average duration of internal calls grouped by function, which are exposed with {salt} stats.
+
+image::saline-salt-master-stats-durations.png[Salt Master Stats (avg. duration)]
+
+== Saline State Jobs dashboard
+
+The dashboard represents {salt} state apply process, it can be used for detailed monitoring of the internals of state apply process initiated for a number of targets.
+
+=== Salt State Jobs (instant)
+
+The panel represents an instant view of the state functions calls represented in the table view.
+
+image::saline-salt-state-jobs.png[Salt State Jobs (instant)]
+
+=== Salt States Profiling
+
+The panel provides the table of state functions calls with the detailed profiling data which can be used for state optimisation.
+
+image::saline-salt-states-profiling.png[Salt States Profiling]
