Apply suggestions from code review
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/specialized-guides/pages/salt/salt-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-monitoring.adoc
@@ -64,7 +64,8 @@ image::saline-salt-minions-activity.png[Minions Activity]
 
 === Salt Events by Tags and Functions
 
-The panel provides the detailed representation of xref:#salt-events-panel[Salt Events] with the event spread by direction. The events which are send to the minions are presented on the positive side of the axis, while the events received from the minions are presented on the negative side.
+The panel provides the detailed representation of xref:specialized-guides:salt/salt-monitoring.adoc#salt-events-panel[Salt Events] with the event spread by direction
+The events which are send to the minions are presented on the positive side of the axis, while the events received from the minions are presented on the negative side.
 
 image::saline-salt-events-by-tags-and-fun.png[Salt Events by Tags and Functions]
 
@@ -98,6 +99,6 @@ image::saline-salt-state-jobs.png[Salt State Jobs (instant)]
 
 === Salt States Profiling
 
-The panel provides the table of state functions calls with the detailed profiling data which can be used for state optimisation.
+The panel provides the table of state functions calls with the detailed profiling data that can be used for state optimization.
 
 image::saline-salt-states-profiling.png[Salt States Profiling]
