more info on software channels and client tools https://github.com/SUSE/spacewalk/issues/25767

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -19,7 +19,10 @@ https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html
 
 == Add Software Channels
 
-Before you register {sle-micro} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
+Before you register {sle-micro} clients to your {productname} Server, you need to add the required software channels and client tools for some channels.
+When the required, you must synchronize them.
+You can add the software channels with the {webui} or from the command line.
+Client tools you can only add from the command line.
 
 include::snippets/arch-other-note.adoc[]
 
