--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -17,16 +17,19 @@ https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html
 
 
 
-== Add Software Channels
+== Add Software Channels and Client Tools
 
 Before you register {sle-micro} clients to your {productname} Server, you need to add the required software channels and client tools for some channels.
-When the required, you must synchronize them.
+When the required channels are properly added, you must synchronize them.
+
+
+=== Software Channels
+
 You can add the software channels with the {webui} or from the command line.
-Client tools you can only add from the command line.
 
 include::snippets/arch-other-note.adoc[]
 
-The products you need for this procedure are:
+The products you need for the {webui} procedure are:
 
 //start with the NEWEST version on top
 [[slemicro-channels-wizard]]
@@ -199,6 +202,12 @@ include::snippets/addchannels_novendor_cli.adoc[]
 
 
 endif::[]
+
+
+
+=== Client Tools
+
+Client tools you can only add from the command line.
 
 
 
