change structure again

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -17,13 +17,9 @@ https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html
 
 
 
-== Add Software Channels and Client Tools
+== Add Software Channels
 
-Before you register {sle-micro} clients to your {productname} Server, you need to add the required software channels and client tools for some channels.
-When the required channels are properly added, you must synchronize them.
-
-
-=== Software Channels
+Before you register {sle-micro} clients to the {productname} Server, you need to add the required software channels, and synchronize them.
 
 You can add the software channels with the {webui} or from the command line.
 
@@ -170,6 +166,11 @@ include::snippets/addchannels_vendor_cli.adoc[]
 
 ifeval::[{uyuni-content} == true]
 
+== Client Tools
+
+Without client tools onboarding clients will fail.
+Client tools you can only add from the command line.
+
 To add the client tools, add these channels from the command prompt:
 
 [[sle-micro-tools-channels-cli]]
@@ -202,12 +203,6 @@ include::snippets/addchannels_novendor_cli.adoc[]
 
 
 endif::[]
-
-
-
-=== Client Tools
-
-Client tools you can only add from the command line.
 
 
 
