Add Saline specialized guide (#3549)
* Add Saline specialized guide

* Apply suggestions from code review

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Add suggested changes and grafana examples

* Apply suggestions from code review

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>
Co-authored-by: Joseph Cayouette <jcayouette@suse.com>

--- a/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
+++ b/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
@@ -5,3 +5,5 @@
 For installations with more than 1000 clients per {productname} Server, adequate hardware sizing and parameter tuning must be performed.
 
 For more information on managing large scale deployments, see xref:specialized-guides:large-deployments/overview.adoc[].
+
+It is recommended to monitor the {salt} event bus in the large scale deployments with xref:salt/salt-monitoring.adoc#saline[Saline] to identify possible bottlenecks.
