ccg Web UI registration ssh #1233497 (#3537)
* clearly separate key/passphrase
https://bugzilla.suse.com/show_bug.cgi?id=1233497
https://github.com/SUSE/spacewalk/issues/25868

--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -4,15 +4,18 @@
 == Introduction
 
 Bootstrapping clients with the {webui} is using xref:specialized-guides:salt/salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
-Salt SSH uses the Salt Bundle and its included Python interpreter. Therefore, no other Python interpreter needs to be installed on the client.
+Salt SSH uses the Salt Bundle with the Python interpreter included.
+Therefore, no other Python interpreter needs to be installed on the client.
 
-Salt Bundle is shipped with the bootstrap repository, therefore the repository must be created before starting the bootstrap process for the client.
+Salt Bundle is made available together with the bootstrap repository. Therefore the bootstrap repository must be created before starting the bootstrap process for the client.
 A shell script detects the operating system on the client and deploys the Salt Bundle from the appropriate bootstrap repository, using the same logic as the bootstrap script.
 
 For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository].
 
 [WARNING]
 ====
+// FIXME: Here, to avoid confusion we probably should explicitly say
+//        "Server container host"?
 Do not register the {productname} Server to itself.
 The {productname} Server must be managed individually or by using another separate {productname} Server.
 For more information about using multiple servers, see xref:specialized-guides:large-deployments/hub-multi-server.adoc[].
@@ -28,16 +31,19 @@ For more information about using multiple servers, see xref:specialized-guides:l
     By default, the SSH  port is [systemitem]``22``.
 . In the [guimenu]``User`` field, type the username to log in to the client.
     By default, the username is [systemitem]``root``.
-. To bootstrap the client with SSH, in the [guimenu]``Authentication`` field, check [guimenu]``SSH Private Key``, and upload the SSH private key to use to log in to the client.
+. Select an [guimenu]``Authentication`` method:
+.. To bootstrap the client with an SSH key, in the [guimenu]``Authentication`` field, check [guimenu]``SSH Private Key``, and upload the SSH private key to use to log in to the client.
     If your SSH private key requires a passphrase, type it into the [guimenu]``SSH Private Key Passphrase`` field, or leave it blank for no passphrase.
-. To bootstrap the client with a password, in the [guimenu]``Authentication`` field, check [guimenu]``Password``, and type the password to log in to the client.
+.. To bootstrap the client with a password, in the [guimenu]``Authentication`` field, check [guimenu]``Password``, and type the password to log in to the client.
 . In the [guimenu]``Activation Key`` field, select the activation key that is associated with the software channel you want to use to bootstrap the client.
     For more information, see xref:client-configuration:activation-keys.adoc[].
 . OPTIONAL: In the [guimenu]``Proxy`` field, select the proxy to register the client to.
 . By default, the [guimenu]``Disable SSH Strict Key Host Checking`` checkbox is selected.
     This allows the bootstrap process to automatically accept SSH host keys without requiring you to manually authenticate.
 . OPTIONAL: Check the [guimenu]``Manage System Completely via SSH`` checkbox.
-    If you check this option, the client is configured to use SSH for its connection to the server, and no other connection method is configured.
+    If you check this option, the client is configured to use SSH for its connection to the server, and no other contact method is configured.
++
+For more information about contact methods, see xref:client-configuration:contact-methods-intro.adoc[].
 . Click btn:[Bootstrap] to begin registration.
 . When the bootstrap process has completed, your client is listed at menu:Systems[System List].
 
