wording (full sentence)

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -25,7 +25,7 @@ You can add the software channels with the {webui} or from the command line.
 
 include::snippets/arch-other-note.adoc[]
 
-The products you need for the {webui} procedure are:
+For the {webui} procedure, you need the following products:
 
 //start with the NEWEST version on top
 [[slemicro-channels-wizard]]
@@ -88,7 +88,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 
 
 Alternatively, you can add channels at the command prompt.
-The channels you need for this procedure are:
+For this procedure, you need the following products:
 
 //start with the NEWEST version on top
 [[slemicro-channels-cli]]
