--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -87,7 +87,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 
 
 
-Alternatively, you can add channels at the command prompt.
+Alternatively, you can add channels from the command prompt.
 For this procedure, you need the following products:
 
 //start with the NEWEST version on top
