--- a/modules/client-configuration/pages/snippets/addchannels_vendor_cli.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_vendor_cli.adoc
@@ -1,5 +1,5 @@
 .Procedure: Adding Software Channels at the Command Prompt
-. At the command prompt on the {productname} host container, as root, add the appropriate channels:
+. At the command prompt on the {productname} container host, as root, add the appropriate channels:
 +
 ----
 mgrctl exec -ti -- mgr-sync add channel <channel_label_1>
