--- a/modules/client-configuration/pages/snippets/check_sync_cli.adoc
+++ b/modules/client-configuration/pages/snippets/check_sync_cli.adoc
@@ -1,9 +1,9 @@
 .Procedure: Checking Synchronization Progress From the Command Prompt
-. At the command prompt on the {productname} Server, as root, use the [command]``tail`` command to check the synchronization log file:
+. At the command prompt on the {productname} container host, as root, check the synchronization log file:
 +
 ----
-tail -f /var/log/rhn/reposync/<channel-label>.log
+mgrctl exec -ti -- tail -f /var/log/rhn/reposync/<channel-label>.log
 ----
 +
 . Each child channel generates its own log during the synchronization progress.
-    You need to check all the base and child channel log files to be sure that the synchronization is complete.
+  You need to check all the base and child channel log files to be sure that the synchronization is complete.
