--- a/modules/client-configuration/pages/snippets/create_bootstrap_repo_register.adoc
+++ b/modules/client-configuration/pages/snippets/create_bootstrap_repo_register.adoc
@@ -1,6 +1,6 @@
 To register your clients, you need a bootstrap repository.
 By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, on the container host, using this command:
+You can manually create the bootstrap repository from the command prompt on the container host:
 
 ----
 mgrctl exec -ti mgr-create-bootstrap-repo
