--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -251,7 +251,7 @@ Either edit the bootstrap script directly and add the settings, or create the bo
 // 2023-12-12, ke: remains in /srv, see
 // https://github.com/uyuni-project/uyuni-docs/pull/2682/files#r1423757456
 ----
-mgr-bootstrap --script=bootstrap-sle-micro.sh \
+mgrctl exec -ti -- mgr-bootstrap --script=bootstrap-sle-micro.sh \
     --ssl-cert=/srv/www/htdocs/pub/RHN-ORG-TRUSTED-SSL-CERT
 ----
 
