--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -11,7 +11,7 @@ transactional-update
 
 . If updates were applied, [literal]``reboot``.
 
-. The {productname} {productnumber} Server container can be updated using the following command:
+. The {productname} Server container can be updated using the following command:
 +
 
 ----
@@ -23,7 +23,7 @@ This command will bring the status of the container up-to-date and restart the s
 .Upgrading to specific version
 [NOTE]
 ====
-If you do not specify the tag parameter , it will default to upgrading to the most recent version.
+If you do not specify the tag parameter, it will default to upgrading to the most recent version.
 To upgrade to a specific version, provide the tag parameter with the desired image tag.
 ====
 
