--- a/modules/specialized-guides/pages/salt/salt-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-monitoring.adoc
@@ -1,12 +1,11 @@
 [[salt-monitoring]]
-
 = Monitoring {salt} Events
 
 In some cases the {salt} event bus could publish significant amount of events with a high rate, what could make it hard to analize.
 Getting the statistics based on the events published in the {salt} event bus can help to identify possible weak points and perform {salt} internals profiling.
 
 [[saline]]
-= Saline
+== Saline
 
 Saline is a powerful tool designed to function as a Prometheus exporter, enabling the collection of metrics based on events from the {salt} event bus. 
 These metrics are derived from event data available on the {salt} master, similar to what is accessible through the command:  
@@ -21,7 +20,7 @@ All related commands and operations should be executed on the {productname} Serv
 In addition to its role as a Prometheus exporter, Saline also provides the [literal]``saline-formula``, which simplifies configuration of Prometheus and Grafana dashboards, enhancing monitoring and visualization capabilities.
 
 [[saline-deployment]]
-== Saline deployment
+=== Saline deployment
 
 To deploy Saline on the {productname} Server use [command]``mgradm upgrade podman`` with [option]``--saline-replicas 1``.
 Saline can be deployed during the installation of the {productname} Server using [command]``mgradm install podman`` with [option]``--saline-replicas 1``.
@@ -29,23 +28,23 @@ The only possible values for [option]``--saline-replicas`` are ``1`` or ``0``.
 The default port [option]``8216`` can be changed with specifying [option]``--saline-port NNNN`` (where [literal]``NNNN`` is a desired port number) on calling [command]``mgradm upgrade podman``.
 After finishing the deployment [literal]``uyuni-server-saline@0.service`` should be configured on the {productname} Server host system.
 
-== {salt} master configuration recommendations
+=== {salt} master configuration recommendations
 
 It is recommended to add [option]``master_stats: True`` and adjust the value of [option]``master_stats_event_iter: 60`` if needed.
 Then restart [command]``salt-master`` to get the detailed statistics of internal {salt} calls.
 This can be help with tuning large scale deployment installations.
 
-== Saline formula
+=== Saline formula
 
-To configure Prometheus and Grafana dashboards, see xref:specialized-guides:salt/salt-formulas-saline.adoc[Saline Formula].
+To configure Prometheus and Grafana dashboards, see xref:specialized-guides:salt/salt-formula-saline.adoc[Saline Formula].
 
-== Removing Saline
+=== Removing Saline
 
 To remove Saline from the {productname} Server use [command]``mgradm upgrade podman`` with [option]``--saline-replicas 0``.
 
-= Examples of resulting Grafana dashboards
+== Examples of resulting Grafana dashboards
 
-== Uyuni Server (with Saline) dashboard
+=== Uyuni Server (with Saline) dashboard
 
 The dashboard represents {salt} events with the different views presented on the panels.
 
