--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -39,7 +39,7 @@ There are two main ways of achieving this.
 In older versions of {productname}, by default, all the intermediate CAs are installed on the client.
 However, you could also configure your services on the server to provide them to the client.
 In this case, during the SSL handshake, the server presents the server certificate as well as all the intermediate CAs.
-This mechanims is used now as the new default configuration.
+This mechanism is used now as the default configuration.
 
 //Whichever method you choose, you must ensure that the ``CA_CERT`` environment variable points to the root CA, and all intermediate CAs.
 //It should not contain the server certificate.
@@ -52,12 +52,12 @@ They usually charge an annual fee for this service.
 Using a third party CA makes certificates harder to spoof, and provides additional protection for your installation.
 If you have certificates signed by a third party CA, you can import them to your {productname} installation.
 
-This manual describe the use of SSL certificates in 2 steps
+This manual describe the use of SSL certificates in two steps:
 
 1. How to create a self-signed certificate with {productname} tools
 2. How to deploy a certificate on {productname} Server or Proxy
 
 In case the certificates are provided by a third party instance like an own or external PKI, step 1 can be skipped.
 
-* For more on how to create self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
-* For more on how to imported certificates, see xref:administration:ssl-certs-imported.adoc[].
+* For more information about creating self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
+* For more information about importing certificates, see xref:administration:ssl-certs-imported.adoc[].
