--- a/modules/specialized-guides/pages/salt/salt-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-monitoring.adoc
@@ -1,12 +1,11 @@
 [[salt-monitoring]]
-
 = Monitoring {salt} Events
 
 In some cases the {salt} event bus could publish significant amount of events with a high rate, what could make it hard to analize.
 Getting the statistics based on the events published in the {salt} event bus can help to identify possible weak points and perform {salt} internals profiling.
 
 [[saline]]
-= Saline
+== Saline
 
 Saline is a powerful tool designed to function as a Prometheus exporter, enabling the collection of metrics based on events from the {salt} event bus. 
 These metrics are derived from event data available on the {salt} master, similar to what is accessible through the command:  
@@ -37,15 +36,15 @@ This can be help with tuning large scale deployment installations.
 
 == Saline formula
 
-To configure Prometheus and Grafana dashboards, see xref:specialized-guides:salt/salt-formulas-saline.adoc[Saline Formula].
+To configure Prometheus and Grafana dashboards, see xref:specialized-guides:salt/salt-formula-saline.adoc[Saline Formula].
 
 == Removing Saline
 
 To remove Saline from the {productname} Server use [command]``mgradm upgrade podman`` with [option]``--saline-replicas 0``.
 
-= Examples of resulting Grafana dashboards
+== Examples of resulting Grafana dashboards
 
-== Uyuni Server (with Saline) dashboard
+=== Uyuni Server (with Saline) dashboard
 
 The dashboard represents {salt} events with the different views presented on the panels.
 
