--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -4,8 +4,8 @@
 By default, {productname} uses a self-signed certificate.
 In this case, the certificate is created and signed by {productname}.
 This method does not use an independent certificate authority to guarantee that the details of the certificate are correct.
-Third party CAs perform checks to ensure that the information contained in the certificate is correct.
-For more on third party CAs, see xref:administration:ssl-certs-imported.adoc[].
+Third-party CAs perform checks to ensure that the information contained in the certificate is correct.
+For more on third-party CAs, see xref:administration:ssl-certs-imported.adoc[].
 
 This section covers how to create or re-create your self-signed certificates on new or existing installation.
 
@@ -27,11 +27,12 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-hostname="susemanager.example.com" --set-cname="example.com"
 ----
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name of your {productname} Server.
-You can use the the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
+You can use the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
 
 The private key and the server certificate can be found in the directory `/root/ssl-build/susemanager/` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
- 
+
+
 
 [[ssl-certs-selfsigned-create-replace]]
 == Create a new CA and Server Certificates
