--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -69,7 +69,7 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-hostname="susemanager.example.top" --set-cname="example.com"
 ----
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name of your {productname} Server.
-You can use the the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
+You can use the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
 +
 You need to generate a server certificate also for each proxy, using their host names and cnames.
 
