--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -160,7 +160,7 @@ When you are preparing to use live patching, there are some important considerat
 In this example you update your systems with the ``SUSE-15-2019-1244`` patch.
 This patch contains ``kernel-default-4.12.14-150.17.1-x86_64``.
 
-You need to exclude all patches which contain a higher version of ``kernel-default``.
+You need to exclude all patches which contain a higher version of [package]``kernel-default`` and [package]``kernel-default-base``.
 
 .Procedure: Excluding Packages with a Higher Kernel Version
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters], and click btn:[Create Filter].
