--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -15,9 +15,9 @@ Before you begin, ensure you have:
 
 All files must be in PEM format.
 
-The host name of the SSL server certificate must match the fully qualified host name of the machine you deploy them on.
-You can set the host names in the [literal]``X509v3 Subject Alternative Name`` section of the certificate.
-You can also list multiple host names if your environment requires it.
+The hostname of the SSL server certificate must match the fully qualified hostname of the machine you deploy them on.
+You can set the hostnames in the [literal]``X509v3 Subject Alternative Name`` section of the certificate.
+You can also list multiple hostnames if your environment requires it.
 Supported Key types are [literal]``RSA`` and [literal]``EC`` (Elliptic Curve).
 
 Third-party authorities commonly use intermediate CAs to sign requested server certificates.
@@ -49,6 +49,8 @@ export SERVER_CERT=<path_to_web_server_certificate>
 ----
 yast susemanager_setup
 ----
++
+// FIXME: where "at the command prompt"?
 +
 When you are prompted for certificate details during setup, fill in random values.
 The values are overridden by the values you specified at the command prompt.
@@ -83,7 +85,7 @@ configure-proxy.sh
 
 [NOTE]
 ====
-Use the same certificate authority to sign all server certificates for servers and proxies.
+Use the same certificate authority (CA) to sign all server certificates for servers and proxies.
 Certificates signed with different CAs do not match.
 ====
 
@@ -98,7 +100,7 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 .Procedure: Replacing Existing Certificates
 
-. On the {productname} Server, at the command prompt, call the command `mgr-ssl-cert-setup` and provide the certificates as parameters:
+. On the {productname} Server, at the command prompt, call the command [command``mgr-ssl-cert-setup``` with the certificates as parameters:
 +
 ----
 mgr-ssl-cert-setup --root-ca-file=<Path_to_Root_CA_Certificate> --server-cert-file=<Server_Cert_File> --server-key-file=<Server_Key_File>
@@ -117,7 +119,7 @@ systemctl restart postgresql.service
 spacewalk-service start
 ----
 
-If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
+If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their hostnames and cnames.
 You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
 Because the {productname} Proxy does not have a postgreSQL database, only [command]``spacewalk-service restart`` is sufficient.
 
