cont.; esp. proxy

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -91,6 +91,7 @@ Certificates signed with different CAs do not match.
 
 
 
+[[ssl-certs-import-replace]]
 == Replace Certificates
 
 You can replace active certificates on your {productname} installation with a new certificate.
@@ -119,9 +120,15 @@ systemctl restart postgresql.service
 spacewalk-service start
 ----
 
+
+
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their hostnames and cnames.
 You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
-Because the {productname} Proxy does not have a postgreSQL database, only [command]``spacewalk-service restart`` is sufficient.
+Because the {productname} Proxy does not have a postgreSQL database, just the dedicated proxy restrart command is sufficient:
+
+----
+spacewalk-proxy restart
+----
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
