--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -5,11 +5,13 @@ By default, {productname} uses a self-signed certificate.
 In this case, the certificate is created and signed by {productname}.
 This method does not use an independent certificate authority to guarantee that the details of the certificate are correct.
 Third-party CAs perform checks to ensure that the information contained in the certificate is correct.
-For more on third-party CAs, see xref:administration:ssl-certs-imported.adoc[].
+
+* For more information on third-party CAs, see xref:administration:ssl-certs-imported.adoc[].
+* For more information on replacing certificates, see xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
 
 This section covers how to create or re-create your self-signed certificates on new or existing installation.
 
-The host name of the SSL keys and certificates must match the fully qualified host name of the machine you deploy them on.
+The hostname of the SSL keys and certificates must match the fully qualified hostname of the machine you deploy them on.
 
 
 == Re-Create Existing Server Certificates
@@ -71,6 +73,6 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name of your {productname} Server.
 You can use the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
 +
-You need to generate a server certificate also for each proxy, using their host names and cnames.
+You need to generate a server certificate also for each proxy, using their hostnames and cnames.
 
 
