--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -79,6 +79,7 @@ After you have completed the initial setup, you can replace the default certific
 ----
 configure-proxy.sh
 ----
+
 . At the ``Do you want to import existing certificates?`` prompt, type kbd:[y].
 . Follow the prompts to complete setup.
 
@@ -99,12 +100,15 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 
 
+=== On the Server
+
 .Procedure: Replacing Existing Certificates
 
 . On the {productname} Server, at the command prompt, call the command [command``mgr-ssl-cert-setup``` with the certificates as parameters:
 +
 ----
-mgr-ssl-cert-setup --root-ca-file=<Path_to_Root_CA_Certificate> --server-cert-file=<Server_Cert_File> --server-key-file=<Server_Key_File>
+mgr-ssl-cert-setup --root-ca-file=<Path_to_Root_CA_Certificate> \
+  --server-cert-file=<Server_Cert_File> --server-key-file=<Server_Key_File>
 ----
 
 
@@ -122,6 +126,8 @@ spacewalk-service start
 
 
 
+=== On the Proxy
+
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their hostnames and cnames.
 You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
 Because the {productname} Proxy does not have a postgreSQL database, just the dedicated proxy restrart command is sufficient:
@@ -130,8 +136,10 @@ Because the {productname} Proxy does not have a postgreSQL database, just the de
 spacewalk-proxy restart
 ----
 
-If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
+=== Deploy the Root CA on Salt Clients
+
+If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
 
 .Procedure: Deploying the Root CA on Salt Clients
