--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -104,7 +104,7 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 .Procedure: Replacing Existing Certificates
 
-. On the {productname} Server, at the command prompt, call the command [command``mgr-ssl-cert-setup``` with the certificates as parameters:
+. On the {productname} Server, at the command prompt, call the command [command]``mgr-ssl-cert-setup`` with the certificates as parameters:
 +
 ----
 mgr-ssl-cert-setup --root-ca-file=<Path_to_Root_CA_Certificate> \
