--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -1,7 +1,7 @@
 [[client-upgrades-spmigration]]
 = Product Migration
 
-== Introcustion
+== Introduction
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
@@ -15,7 +15,6 @@ You can also migrate openSUSE Leap to a later minor version or to the correspond
 * openSUSE Leap 15.1 to 15.2
 * openSUSE Leap 15.1 to {sles} 15 SP1
 * openSUSE Leap 15.5 to {sles} 15 SP5
-
 
 In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scclongform} provides it.
 For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
@@ -184,7 +183,7 @@ In this case, the system is being upgraded to SLES 15 SP3, and the label is [lit
 To see a list of all base channels currently mirrored, run:
 +
 ----
-spacecmd softwarechannel_listbasechannels.
+spacecmd softwarechannel_listbasechannels
 ----
 +
 Keep in mind you cannot upgrade to a channel unless it is an available target for your current base channel.
