SLES to SLES For SAP product migration https://github.com/SUSE/spacewalk/issues/26050

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -16,6 +16,10 @@ You can also migrate openSUSE Leap to a later minor version or to the correspond
 * openSUSE Leap 15.1 to {sles} 15 SP1
 * openSUSE Leap 15.5 to {sles} 15 SP5
 
+You can also migrate {sles} to the corresponding {slesforsap} SP level, for example:
+
+* {sles} 15 SP5 to {slesforsap} 15 SP5
+
 In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scclongform} provides it.
 For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
 
