--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -27,7 +27,7 @@ When you setup new clients which should be managed, take care that you put them 
 ====
 If you want to manage systems in an already existing network, you must configure **peering**.
 
-For more information, see link:https://learn.microsoft.com/en-us/azure/virtual-network/tutorial-connect-virtual-networks?tabs=portal#create-virtual-network-peer[this tutorial].
+For more information, see link:https://learn.microsoft.com/en-us/azure/virtual-network/tutorial-connect-virtual-networks?tabs=portal#create-virtual-network-peer[Azure documentation].
 ====
 
 
