--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -2,6 +2,7 @@
 = Product Migration
 
 == Introduction
+
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
@@ -24,6 +25,13 @@ In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scclongfo
 For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
 
 For supported {sles} upgrade paths, see link:https://documentation.suse.com/en-us/sles/15-SP4/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported[].
+
+
+[NOTE]
+====
+All recommended extensions are automatically enabled when you migrate.
+====
+
 
 
 [NOTE]
